tests/fixtures/LatestTests/ObjectTests/errors/circular_type_definition.fg
/; EXPECT_ERROR: CustomTypeNotFound
type A = {
    b: B
}

type B = {
    a: A
}

